<resources>
    <string name="app_name">WhatsappClone</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="message">message</string>
    <string name="chats">Chats</string>
    <string name="status">Status</string>
    <string name="calls">Calls</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign Up!</string>
    <string name="log_in">Log In!</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="create_account">Create account</string>
    <string name="please_wait">Please wait...</string>
    <string name="image">image</string>
    <string name="search">Search</string>
</resources>